Privacy notice and C1A welsh docs added